Closed Bug 617863 Opened 14 years ago Closed 14 years ago

"ASSERTION: video changed size?" from plugins' BasicImageLayers

Categories

(Core :: Graphics, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cjones, Assigned: cjones)

References

Details

Attachments

(1 file)

Another pseudo-assertion to check assumptions about video.  However, this can happen with OOPOOPP (woo! out-of-process-out-of-process plugins) that use asynchronous painting, because they end up creating ImageLayers.

Another pseudo-assertion to drop.
Assignee: nobody → jones.chris.g
Attachment #496418 - Flags: review?(roc)
Attachment #496418 - Flags: approval2.0?
Attachment #496418 - Flags: review?(roc)
Attachment #496418 - Flags: review+
Attachment #496418 - Flags: approval2.0?
Attachment #496418 - Flags: approval2.0+
http://hg.mozilla.org/mozilla-central/rev/d4084c318c9e
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: