Bug 617863: Remove a pseudo-assertion that doesn't hold for plugin ImageLayers. r=roc a=a